# innigkeit

./: .editorconfig  .gdbinit  .gitattributes  .gitignore  .lldbinit  .rustfmt.toml  ATTRIBUTION.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  DESIGN.md  README.md  build.zig  build.zig.zon  flake.nix  setup.sh  x86_64-unknown-innigkeit.json
.cargo/: config.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: session-start.sh
.claude/rules/: acpi.md  arm.md  boot.md  build.md  capabilities.md  core.md  drivers.md  filesystem-library.md  filesystem.md  library.md  memory.md  network.md  pci.md  scheduler.md  sdk.md  tpm-secure-boot.md  user-boundary.md  wm.md  x64.md
.github/workflows/: ci.yml  release.yml  secboot-verify.yml
apps/: root.zig
apps/calculator/: calculator.zig  main.zig  manifest.toml
apps/doom/: README.md  custom.zig  doom_stub.c  doomgeneric_innigkeit.c  innigkeit_libc.c  innigkeit_syscalls.h  libc.zig  main.zig  manifest.toml  syscalls.zig
apps/gfx_demo/: main.zig  manifest.toml
apps/hello_world/: hello_world.zig  main.zig  manifest.toml
apps/installer/: manifest.toml
apps/pixels/: main.zig  manifest.toml
apps/rust_cat/: Cargo.toml  manifest.toml
apps/rust_echo/: Cargo.toml  manifest.toml
apps/rust_hello/: Cargo.toml  manifest.toml
apps/shader_demo/: main.zig  manifest.toml
apps/shell/: LineEditor.zig  commands.zig  completions.zig  environment.zig  main.zig  manifest.toml  scancode.zig  shell.zig
apps/std_demo/: main.zig  (+1 more)
docs/: DESIGN.md  QoS.md  arm-port.md  clippy-rustfmt-mapping.md  design-goals.md  next-epoch-plan.md  roadmap.md  secure-boot.md  security-audit.md  syscall-abi.md  syscall-foundation.md  test-harness-plan.md  todo-review.md  upstream-review-plan.md  verification-and-ci.md  wm-wayland-plan.md
keys/: codesign_public.key
scripts/: cloud-setup.sh  test_arm.sh  verify.sh
sdk/: build.zig  build.zig.zon
src/: main.zig  root.zig  test.zig
tools/: root.zig
(+504 files in other folders)
