[workspace]
resolver = "2"
members = [
    "library/innigkeit-rs",
    "apps/rust_hello",
    "apps/rust_echo",
    "apps/rust_cat"
]

[workspace.package]
authors = ["depressionlab"]
edition = "2024"
homepage = "https://github.com/depressionlab/innigkeit"
repository = "https://github.com/depressionlab/innigkeit"
readme = "README.md"
license = "EUPL-1.2"
version = "0.1.0"
rust-version = "1.96"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unnecessary_cast = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
dbg_macro = "warn"
deprecated_cfg_attr = "warn"
separated_literal_suffix = "warn"
undocumented_unsafe_blocks = "warn"
allow_attributes = "warn"
ref_patterns = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
missing_errors_doc = "allow"
future_not_send = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"
cast_precision_loss = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"
too_many_lines = "allow"

[workspace.lints.rust]
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_allocation = "warn"
unused_import_braces = "warn"
dead_code = "warn"
unsafe_code = "warn"
unexpected_cfgs = "warn"
deprecated = "warn"
deprecated_in_future = "forbid"
unused_must_use = "deny"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = "symbols"

[profile.dev]
panic = "abort"
